Fix footer overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -446,6 +446,7 @@ margin:0;
   color: #aaa;
   font-family: 'Lato', sans-serif;
   font-size: 0.9em;
+  z-index: 1000;
 }
 
 #footer-left {
